text alignment fixed in about page

--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ section {
 
 .about {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     gap: 2rem;
